<resources>
    <string name="app_name">AuctionApp</string>


    <!--Login/Registration specific -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="app_title">Awesome Auction App</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_credentials">Invalid credentials entered. Please try again.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot password</string>
    <string name="need_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="password_confirmation">Re-enter password</string>
    <string name="log_off">LOG OFF</string>
    <string name="opening_message">Opening Message</string>
    <string name="check_available_auctions">Check available Auctions</string>
    <string name="list_auction">List an Item for Auction</string>
    <string name="previous_listed">Previously listed Auction items</string>
</resources>